fix sort data and D3 binding (thanks @bverjat)

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -28,6 +28,7 @@
 		<div class="col-md-12">
 		<reportings-available
 	        ng-data="matrix"
+	        ng-sort="changed"
 	      ></reportings-available>
 		</div>
 	</div>
