add time series dots on linechart

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -321,7 +321,7 @@
 </div>
   <div class="row">
     <div class="col-sm-12 text-center shdt">
-      <button type="button" class="btn" ng-model="viewTable" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-click="takeData()">
+      <button type="button" class="btn" ng-model="viewTable" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
         {{ 'DOWNLOAD_1' | translate }}
       </button>
       <button type="button" ng-click="download()" class="btn">
