--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -20,7 +20,7 @@
          
         </p>
         <dual-timeline  
-          ng-data="tableData" 
+          ng-data="timelineData" 
           start-date="selectedMinDate" 
           end-date="selectedMaxDate" 
         ></dual-timeline>
