fix tick scaling issue of linechartWorld

--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -116,7 +116,7 @@
   <div id="select-lineChart" >
   <div class="row">
     <div class="col-xs-12 col-sm-12">
-      <linechart-world ng-data="linechartData">
+      <linechart-world ng-data="linechartData" currency="linechartCurrency">
       </linechart-world>
     </div>
   </div>
