--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -314,7 +314,7 @@
 
   <div class="row">
     <div class="col-sm-12">
-      <linechart-world ng-data="linechartData">
+      <linechart-world ng-data="linechartData" currency="linechartCurrency">
       </linechart-world>
     </div>
   </div>
