--- a/client/partials/network.html
+++ b/client/partials/network.html
@@ -25,7 +25,7 @@
 			 <button type="button" class="btn" ng-click="exp()">
 			 	Show import trade values
 			 </button> -->
-			<div id="network">
+			<div id="network" class="col-md-8">
 				<div id="controls">
 					<button type="button" class="btn" ng-click="unzoom()">
 						<span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
@@ -50,14 +50,14 @@
 					 </button>
 				</div>
 			</div>
-			<div class="col-md-12">
-				<div class="row">
-					    <div class="col-md-4">
+			<div id="network_legend" class="col-md-4">
+				<!-- <div class="row"> -->
+					    <div>
 					    <h5 class="underline">Filters node with degree</h5>
 					      <h6>min degree <span id="min-degree-val">0</span></h6>
 					      0 <input id="min-degree" type="range" min="0" max="0" value="0"> <span id="max-degree-value">0</span>
 					    </div>
-					    <div class="col-md-4">
+					    <div>
 					    <h5 class="underline">Filters node on flows</h5>
 					      <h6>min flow <span id="min-flow-val">0</span></h6>
 					      0 <input id="min-flow" type="range" min="0" max="0" value="0"> <span id="max-flow-value">0</span>
@@ -68,7 +68,7 @@
 					      <button id="export-btn" class="btn" ng-click="export()">Export network data</button>
 					    </div>
 					    <div id="dump" class="hidden"></div>
-					</div>
+					<!-- </div> -->
 				</div>
 				<!-- <h2>List of neighboors of node selected : </h2>
 				<div class="col-md-12">
