fix filter/highlighting issues on network

--- a/client/partials/network.html
+++ b/client/partials/network.html
@@ -31,7 +31,7 @@
 						<span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
 					</button>
 					 <button type="button" class="btn" ng-click="rescale()">
-					 	<span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+					 	<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 					 </button>
 					 <button type="button" class="btn" ng-click="zoom()">
 					 	<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
